--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body class="bg-black">
-    <nav
+    <!-- <nav
         class="navbar navbar-expand-lg navbar-dark bg-black bg-opacity-75  text-opacity-100 position-sticky top-0 padding0 ">
         <div class="container-fluid d-flex justify-content-center ">
             <a class="navbar-brand" href="#"></a>
@@ -27,15 +28,15 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse navbar-dark bg-black bg-opacity-50 text-opacity-100 position-sticky top-0  d-flex justify-content-center"
-                id="navbarNav1">
+            <div class="collapse navbar-collapse navbar-dark bg-black bg-opacity-50 text-opacity-100 position-sticky top-0  d-flex justify-content-center navbarNav1"
+                id="navbarNav">
                 <ul class="navbar-nav fs1">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#"><img src="images/apple.svg"
-                                class="w-100 bg-light"></a>
+                        <a class="nav-link" aria-current="page" href="#"><img
+                                src="images/globalnav_apple_image__b5er5ngrzxqq_large.svg" class="w-100"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Store</a>
+                        <a class="nav-link" aria-current="page" href="#">Store</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Mac</a>
@@ -77,6 +78,59 @@
                 </ul>
             </div>
         </div>
+    </nav> -->
+    <!-- second navigation bar ///////////////////////////////////////////////-->
+    <nav class="navbar navbar-expand-md navBgCustom navbar-dark position-sticky top-0 navfont">
+        <div class="container-fluid">
+            <a class="navbar-brand d-md-none" href="#"><i class="bi bi-apple"></i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class=""><i class="bi bi-collection-play"></i></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav mx-auto my-2 my-md-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item d-none d-md-block fs-6">
+                        <a class="nav-link" aria-current="page" href="#"><i class="bi bi-apple"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Store</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Mac</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">iPad</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">iPhone</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Watch</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">AirPods</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">TV & Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Only on Apple</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Accessories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Support</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="bi bi-search"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="bi bi-bag"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <!-- -----------------------------------------Box 1 heading button titles -->
@@ -84,7 +138,8 @@
     <div class="container-fluid d-flex justify-content-center">
         <div class="row">
             <div class="col-lg-12 d-flex justify-content-center align-items-end dv1">
-                <h2 class="fonts1">&nbsp; Introducing the <br>all-new HomePod.</h2>
+                <h2 class=" fonts1">&nbsp; Introducing the <br>all-new HomePod. </h2>
+
 
             </div>
             <div class="row">
@@ -99,17 +154,13 @@
             </div>
             <div class="row">
                 <div class="col d-flex justify-content-center box1-part3">
-                    <p>Available starting 2.3</p>
+                    <p class="fs-6">Available starting 2.3</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 d-flex justify-content-center ">
-                    <a href="#" class="bluelink">Learn more <span class="material-symbols-outlined icon-placement">
-                            navigate_next
-                        </span></a>
-                    <a href="#" class="bluelink">Order Now <span class="material-symbols-outlined icon-placement">
-                            navigate_next
-                        </span></a>
+                    <a href="#" class="bluelink">Learn more <i class="bi bi-chevron-right fs-6"></i></a>
+                    <a href="#" class="bluelink">Order Now <i class="bi bi-chevron-right fs-6"></i></a>
                 </div>
 
             </div>
@@ -479,36 +530,171 @@
         <div class="row">
             <div class="col-md-12 custom bg-body-secondary footer-height">
                 <div class="row">
-                    <div
-                        class="col-12 col-xl-10 offset-xl-1 border-bottom border-opacity-25 border-1 border-secondary ">
+                    <div class="col-12 col-xl-10 offset-xl-1  ">
                         <ul class="ul-prop1 ">
+                            <li class="padding0 li-margint">1. New subscribers only. $6.99/month after free trial. Plan
+                                automatically renews until cancelled. </li>
+                            <li class="padding0 li-margint">2. Apple Fitness+ requires iPhone 8 or later, or
+                                Apple Watch Series 3 or later paired with iPhone 6s or later. New subscribers only.
+                                $9.99/month after trial. Plan automatically renews until cancelled.
+                            </li>
+                            <li class="padding0 li-margint">A subscription is required for Apple Fitness+.
+                            </li>
+                            <li class="padding0 li-margint">Apple Fitness+ requires an iPhone 8 or later with iOS 16.1.
+                            </li>
+
+                            <li class="padding0 li-margint">Apple Fitness+ requires an Apple Watch Series 3 or later.
+                                Available when paired with iPhone 6s or later with iOS 14.3 or later.
+                            </li>
+                            <li class="padding0 li-margint">Fitness app on Apple TV requires tvOS 14.3 or later.
+                            </li>
+
+                            <li class="padding0 li-margint">Fitness app on iPad requires iPadOS 14.3 or later.
+
+                            </li>
+
+                            <li class="padding0 li-margint">To get the newest features, make sure your devices are
+                                running the latest software version.
+                            </li>
                             <li class="padding0 li-margint">To access and use all the features of Apple Card, you must
-                                add
-                                Apple Card to Wallet on
-                                an iPhone or iPad with the latest version of iOS or iPadOS. Update to the latest version
-                                by going to Settings > General > Software Update. Tap Download and Install.</li>
+                                add Apple Card to Wallet on an iPhone or iPad with the latest version of iOS or iPadOS.
+                                Update to the latest version by going to Settings > General > Software Update. Tap
+                                Download and Install.
+                            </li>
                             <li class="padding0 li-margint">Available for qualifying applicants in the United States.
                             </li>
                             <li class="padding0 li-margint">Apple Card is issued by Goldman Sachs Bank USA,
                                 Salt Lake City Branch.
                             </li>
                             <li class="padding0 li-margint">Learn more about how Apple Card applications are evaluated
-                                at <a href="https://support.apple.com/kb/HT209218">support.apple.com/kb/HT209218</a>.
+                                at <a href="https://support.apple.com/kb/HT209218">support.apple.com/kb/HT209218</a>
                             </li>
+
                             <li class="padding0 li-margint"><span class="d-none d-xl-inline">Major League Baseball
                                     trademarks and
                                     copyrights are
-                                    used with permission of MLB Advanced Media, L.P. All rights reserved.</span></li>
+                                    used with permission of MLB Advanced Media, L.P. All rights reserved.</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
-                <div class="row"></div>
+                <hr>
+                <div class="row">
+                    <div class="col-2">
+                        <ul class="listcustomB2">
+                            <li class="fw-bold mt-md-2">Shop and Learn</li>
+                            <li><a href="#">Store</a></li>
+                            <li><a href="#">Mac</a></li>
+                            <li><a href="#">iPad</a></li>
+                            <li><a href="#">iPhone</a></li>
+                            <li><a href="#">Watch</a></li>
+                            <li><a href="#">AirPods</a></li>
+                            <li><a href="#">TV & Home</a></li>
+                            <li><a href="#">AirTag</a></li>
+                            <li><a href="#">Accessories</a></li>
+                            <li><a href="#">Gift Cards</a></li>
+                        </ul>
+                        <ul class="listcustomB2">
+                            <li class="fw-bold mt-2">Apple Wallet</li>
+                            <li><a href="#">Wallet</a></li>
+                            <li><a href="#">Apple Card</a></li>
+                            <li><a href="#">Apple Pay</a></li>
+                            <li><a href="#">Apple Cash</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <ul class="listcustomB2">
+                            <li class="fw-bold mt-md-2">Account</li>
+                            <li><a href="#">Manage Your Apple ID</a></li>
+                            <li><a href="#">Apple Store Account</a></li>
+                            <li><a href="#">iCloud.com</a></li>
+                        </ul>
+                        <ul class="listcustomB2">
+                            <li><span class="fw-bold mt-2">Entertainment</span></li>
+
+                            <li><a href="#">Apple One</a></li>
+                            <li><a href="#">Apple TV+</a></li>
+                            <li><a href="#">Apple Music</a></li>
+                            <li><a href="#">Apple Arcade</a></li>
+                            <li><a href="#">Apple Fitness+</a></li>
+                            <li><a href="#">Apple News+</a></li>
+                            <li><a href="#">Apple Podcast</a></li>
+                            <li><a href="#">Apple Books</a></li>
+                            <li><a href="#">App Store</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <ul class="listcustomB2">
+                            <li class="mt-md-2"><span class="fw-bold mt-2">Apple Store</span></li>
+                            <li><a href="#">Find a Store</a></li>
+                            <li><a href="#">Genius Bar</a></li>
+                            <li><a href="#">Today at Apple</a></li>
+                            <li><a href="#">Apple Camp</a></li>
+                            <li><a href="#">Apple Store App</a></li>
+                            <li><a href="#">Refurbished and Clearance</a></li>
+                            <li><a href="#">Financing</a></li>
+                            <li><a href="#">Apple Trade In</a></li>
+                            <li><a href="#">Order Status</a></li>
+                            <li><a href="#">Shopping Help</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="listcustomB2">
+                            <li class="mt-md-2"><span class="fw-bold mt-2">For Business</span></li>
+                            <li><a href="#">Apple and Business</a></li>
+                            <li><a href="#">Shop for Business</a></li>
+                        </ul>
+                        <ul class="listcustomB2">
+                            <li><span class="fw-bold mt-2">For Education</span></li>
+                            <li><a href="#">Apple and Education</a></li>
+                            <li><a href="#">Shop for K-12</a></li>
+                            <li><a href="#">Shop for College</a></li>
+                        </ul>
+                        <ul class="listcustomB2">
+                            <li><span class="fw-bold mt-2">For Healthcare</span></li>
+                            <li><a href="#">Apple in Healthcare</a></li>
+                            <li><a href="#">Health and Apple Watch</a></li>
+                            <li><a href="#">Health Records on iPhone</a></li>
+                        </ul>
+                        <ul class="listcustomB2">
+                            <li><span class="fw-bold mt-2">For Government</span></li>
+                            <li><a href="#">Shop for Government</a></li>
+                            <li><a href="#">Shop for Veterans and Military</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="listcustomB2">
+                            <li class="mt-md-2"><span class="fw-bold mt-2">Apple Values</span></li>
+
+                            <li><a href="#">Accessibility</a></li>
+                            <li><a href="#">Education</a></li>
+                            <li><a href="#">Environment</a></li>
+                            <li><a href="#">Inclusion and Diversity</a></li>
+                            <li><a href="#">Privacy</a></li>
+                            <li><a href="#">Racial Equity and Justice</a></li>
+                            <li><a href="#">Supplier Responsibility</a></li>
+                        </ul>
+                        <ul class="listcustomB2">
+                            <li><span class="fw-bold mt-2">About Apple</span></li>
+
+                            <li><a href="#">Newsroom</a></li>
+                            <li><a href="#">Apple Leadership</a></li>
+                            <li><a href="#">Career Opportunities</a></li>
+                            <li><a href="#">Investors</a></li>
+                            <li><a href="#">Ethics & Compliance</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Contact Apple</a></li>
+                        </ul>
+                    </div>
+
+                </div>
                 <div class="row"></div>
 
 
             </div>
         </div>
     </div>
+    <!-- ---------------------------------------------------------footer -->
 
 </body>
 
